SUPER AWESOME CENTER

--- a/index.html
+++ b/index.html
@@ -18,13 +18,17 @@
 <body>
     <div>
         <h1 id="name">Akash Patel</h1>
-        
         <div class="contact-section">
             <div>
+                <p></p>
                 <ul class="list-inline banner-social-buttons">
 
                     <li>
                         <a href="mailto:akash_patel97@hotmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-2x"></i> <span class="network-name"></span></a>
+                    </li>
+                    
+                    <li>
+                        <a href="https://twitter.com" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-2x" id="my-twitter"></i> <span class="network-name"></span></a>
                     </li>
 
                     <li>
