--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
+    
 
 
 </head>
@@ -21,11 +22,11 @@
         <h1 id="name">Akash Patel</h1>
 
 
-        <div class="resume-section">
+        <div>
             <div class="container">
                 <div>
                     <ul class="list-unstyled site-content">
-                        <li class="content-text" data-toggle="modal" data-target="#about">About Me</li>
+                        <li class="content-text" data-toggle="modal" data-target="#about">About Me</li>                      
                         <li class="content-text">Projects</li>
                         <li class="content-text">
                             <a href="resume/AkashPatel_CResume.pdf" id="link" target="_blank">Résumé</a>
@@ -34,8 +35,6 @@
                 </div>
             </div>
         </div>
-
-
 
         <div class="contact-section">
             <div>
@@ -65,6 +64,7 @@
             </div>
         </div>
     </div>
+    
 </body>
 
 </html>
