--- a/projects.html
+++ b/projects.html
@@ -55,7 +55,7 @@
 
 
     <div class="text-center">
+        <a href="index.html" id="link" style="font-size:3em">Back</a>
         <p></p>
-        <a href="index.html" id="link">Back</a>
     </div>
 </body>
