--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul class="list-inline banner-social-buttons">
 
                 <li>
-                    <a href="mailto:akash_patel97@hotmail.com" class="btn btn-default btn-lg"><i class="fa fa-envelope-o fa-3x"></i> <span class="network-name"></span></a>
+                    <a href="mailto:akash_patel97@hotmail.com" class="btn btn-default btn-lg" id="my-email"><i class="fa fa-envelope-o fa-3x"></i> <span class="network-name"></span></a>
                 </li>
 
                 <!-- <li>
