--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,15 @@
     <div>
         <p class="text">Finalist at WearHacks Toronto 2015, this is an internet of things device/pillow that monitors a users head movement and sound (ex. snoring) and then displays it as a real-time graph on the web for the users to view to identify health risks.</p>
     </div>
+    
+    <div>
+            <h2 class="project-title">Personal Site (Version 1)</h2>
+    </div>
+    <div>
+        <p class="text">First version of my personal site. Click <a id="link" href="http://startparadox.github.io/personal_site/" target="_blank">here</a> to see it.</p>
+    </div>
+
+    
 
  </div>    
 
