--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
                         <li class="content-text"><a id="link" href="projects.html">Projects</a></li>
                         <li class="content-text">
-                            <a href="resume/AkashPatel_CResume.pdf" id="link" target="_blank">Résumé</a>
+                            <a href="resume/Akash%20Patel%20_%20Resume.pdf" id="link" target="_blank">Résumé</a>
                         </li>
                     </ul>
                 </div>
