--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
             <h2 class="project-title">PythonGrow</h2>
         </div>
         <div>
+            <a class="text" id="link" href="https://github.com/AroundTheLines/hackathon.submit" target="_blank">Link</a>
             <p class="text">This web application was a finalist at the Koding Global Virtual Hackathon. The aim of this application was to introduce software development to beginners through gamification. The web application developed was based on the classic game of snake. Players would navigate the python to eat letters in the correct order to write out a snippet of code. At the end of the level they would receive an explanation of the code snippet</p>
         </div>
 
@@ -58,6 +59,7 @@
             <h2 class="project-title">PebbleChange</h2>
         </div>
         <div>
+            <a class="text" id="link" href="http://startparadox.github.io/personal_site/" target="_blank">Link</a>
             <p class="text">A Pebble Watch application developed at UofTHacks 2015 based on the theme of social benifit. Users are given a list of charities (choosing from local, national or international) which they can donate their spare change to. They can access more information about the charity through QR codes displayed on the Pebble. The application also showed trending hashtags related to charities on Twitter (such as the ice bucket challenge)</p>
         </div>
 
@@ -66,7 +68,8 @@
             <h2 class="project-title">PillowCase</h2>
         </div>
         <div>
-            <p class="text">Finalist at WearHacks Toronto 2015. This device integrates the Internet of Things (IOT) with a pillowcase using the Intel Edison/Arduino. The case is used to monitor head movement and snoring. Head movement and snoring are visualized via charts on a website so users and others can identify potential health risks.</p>
+            <a class="text" id="link" href="https://github.com/wearhackstoronto/Pillowcase" target="_blank">Link</a>
+            <p class="text">Finalist at WearHacks Toronto 2015. This device integrates the web with a pillowcase using the Intel Edison/Arduino. The case is used to monitor head movement and snoring. Head movement and snoring are visualized via charts on a website so users and others can identify potential health risks.</p>
         </div>
 
         <div>
@@ -80,6 +83,7 @@
             <h2 class="project-title">URL Shortener</h2>
         </div>
         <div>
+            <a class="text" id="link" href="https://github.com/StartParadox/short" target="_blank">Link</a>
             <p class="text">A simple URL Shortener Chrome Extension. It uses the Google Chrome URL Shortener API to produce a shortened link of the current page that the user is on when they click the extension icon. The user can then click the copy button to copy the link to their clipboard.</p>
         </div>
 
