--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
             <h2 class="project-title">PebbleChange</h2>
         </div>
         <div>
-            <a class="text" id="link" href="http://startparadox.github.io/personal_site/" target="_blank">Link</a>
+            <a class="text" id="link" href="https://github.com/AroundTheLines/PebbleChange" target="_blank">Link</a>
             <p class="text">A Pebble Watch application developed at UofTHacks 2015 based on the theme of social benifit. Users are given a list of charities (choosing from local, national or international) which they can donate their spare change to. They can access more information about the charity through QR codes displayed on the Pebble. The application also showed trending hashtags related to charities on Twitter (such as the ice bucket challenge)</p>
         </div>
 
