--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </li>-->
 
                 <li>
-                    <a href="https://github.com/StartParadox/" target="_blank" class="btn btn-default btn-lg" id="my-github"><i class="fa fa-github fa-3x"></i> <span class="network-name"></span></a>
+                    <a href="https://github.com/akvsh/" target="_blank" class="btn btn-default btn-lg" id="my-github"><i class="fa fa-github fa-3x"></i> <span class="network-name"></span></a>
                 </li>
 
                 <li>
