--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 <body>
     <h1 id="title">About Me</h1>
 
-    <p id="about"> Hey there! My name is Akash Patel. I'll be a going into my 2A term in Computer Science at the University of Waterloo this Fall 2016. I'm currently working at <a target="_blank" id="link" href="https://league.com/toronto">LEAGUE</a> as an Automation Engineering Intern. I like building things and learning how to build things!</p>
+    <p id="about"> Hey there! My name is Akash Patel. I'll be a going into my 2A term in Computer Science at the University of Waterloo this Fall 2016. I'm currently working at <a target="_blank" id="link" href="https://league.com/toronto">LEAGUE</a> as an Automation Engineering Intern. I like building things and learning how to build things. Check out my resume and projects page to learn more!</p>
 
 
     <div class="text-center">
