--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                         <li class="content-text"><a id="link" href="projects.html">Projects</a></li>
                         <li class="content-text">
-                            <a href="resume/Patel_Akash_Resume.pdf" id="link" target="_blank">Résumé</a>
+                            <a href="resume/resume.pdf" id="link" target="_blank">Résumé</a>
                         </li>
                     </ul>
                 </div>
