added new projects, changed order, new resume

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                         <li class="content-text"><a id="link" href="projects.html">Projects</a></li>
                         <li class="content-text">
-                            <a href="resume/resume.pdf" id="link" target="_blank">Résumé</a>
+                            <a href="Akash%20Patel%20Resume.pdf" id="link" target="_blank">Résumé</a>
                         </li>
                     </ul>
                 </div>
