--- a/projects.html
+++ b/projects.html
@@ -38,12 +38,40 @@
     <h1 id="title">Projects</h1>
 
     <div class="container">
+
         <div>
-            <h2 class="project-title">Poo-P</h2>
+            <h2 class="project-title">Tunez</h2>
         </div>
         <div>
-            <p class="text">Created at the William Osler KissMyApp Hackathon, it is an android application that gives a stool/urine analysis to the user (informs user about potential health issues along with solutions and prevention of said issues). The app asks the user a series of questions to answer (colour, shape, symptoms etc.) to determine the potential problems.</p>
+            <a class="text" id="link" href="https://github.com/akvsh/tunez" target="_blank">Link</a>
+            <p class="text"> A reddit-like web app where users post and share new music. Other users can then upbeat(upvote) or downbeat(downvote) the posts as well as comment on the posts. Created with the MEAN (MongoDB, Express.js, AngularJS, Node.js) stack. RESTful API backend and login/authentication with Passport/JWT (JSON Web Tokens)</p>
         </div>
+
+        <div>
+            <h2 class="project-title">FreshhhTweets</h2>
+        </div>
+        <div>
+            <a class="text" id="link" href="https://github.com/akvsh/freshhhTweets" target="_blank">Link</a>
+            <p class="text">A Python script that scrapes the hot posts on the /r/hiphopheads subreddit and tweets new music posts (identified by the 'FRESH' tag). Created using the Twitter/Reddit APIs and a crontab along with the Python script. See the Twitter bot in action <a id="link" href="https://twitter.com/freshhhmusic" target="_blank">here</a> </p>
+        </div>
+
+        <div>
+            <h2 class="project-title">Short</h2>
+        </div>
+        <div>
+            <a class="text" id="link" href="https://github.com/akvsh/short" target="_blank">Link</a>
+            <p class="text">A simple URL Shortener Chrome Extension. It uses the Google Chrome URL Shortener API to produce a shortened link of the current page that the user is on when they click the extension icon. The user can then click the copy button to copy the link to their clipboard.</p>
+        </div>
+
+
+        <div>
+            <h2 class="project-title">PillowCase</h2>
+        </div>
+        <div>
+            <a class="text" id="link" href="https://github.com/wearhackstoronto/Pillowcase" target="_blank">Link</a>
+            <p class="text">Finalist at WearHacks Toronto 2015. This device integrates the web with a pillowcase using the Intel Edison/Arduino. The case is used to monitor head movement and snoring. Head movement and snoring are visualized via charts on a website so users and others can identify potential health risks.</p>
+        </div>
+
 
 
         <div>
@@ -63,28 +91,19 @@
             <p class="text">A Pebble Watch application developed at UofTHacks 2015 based on the theme of social benifit. Users are given a list of charities (choosing from local, national or international) which they can donate their spare change to. They can access more information about the charity through QR codes displayed on the Pebble. The application also showed trending hashtags related to charities on Twitter (such as the ice bucket challenge)</p>
         </div>
 
+        <div>
+            <h2 class="project-title">Poo-P</h2>
+        </div>
+        <div>
+            <p class="text">Created at the William Osler KissMyApp Hackathon, it is an android application that gives a stool/urine analysis to the user (informs user about potential health issues along with solutions and prevention of said issues). The app asks the user a series of questions to answer (colour, shape, symptoms etc.) to determine the potential problems.</p>
+        </div>
 
-        <div>
-            <h2 class="project-title">PillowCase</h2>
-        </div>
-        <div>
-            <a class="text" id="link" href="https://github.com/wearhackstoronto/Pillowcase" target="_blank">Link</a>
-            <p class="text">Finalist at WearHacks Toronto 2015. This device integrates the web with a pillowcase using the Intel Edison/Arduino. The case is used to monitor head movement and snoring. Head movement and snoring are visualized via charts on a website so users and others can identify potential health risks.</p>
-        </div>
 
         <div>
             <h2 class="project-title">Personal Site (Version 1)</h2>
         </div>
         <div>
-            <p class="text">First version of my personal site. Click <a id="link" href="http://startparadox.github.io/personal_site/" target="_blank">here</a> to see it.</p>
-        </div>
-
-        <div>
-            <h2 class="project-title">URL Shortener</h2>
-        </div>
-        <div>
-            <a class="text" id="link" href="https://github.com/StartParadox/short" target="_blank">Link</a>
-            <p class="text">A simple URL Shortener Chrome Extension. It uses the Google Chrome URL Shortener API to produce a shortened link of the current page that the user is on when they click the extension icon. The user can then click the copy button to copy the link to their clipboard.</p>
+            <p class="text">First version of my personal site. Click <a id="link" href="http://akvsh.github.io/personal_site/" target="_blank">here</a> to see it.</p>
         </div>
 
     </div>
