--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                         <li class="content-text"><a id="link" href="projects.html">Projects</a></li>
                         <li class="content-text">
-                            <a href="Akash%20Patel%20Resume.pdf" id="link" target="_blank">Résumé</a>
+                            <a href="resume.pdf" id="link" target="_blank">Resume</a>
                         </li>
                     </ul>
                 </div>
