--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 <body>
     <h1 id="title">About Me</h1>
 
-    <p id="about"> Hey there! My name is Akash Patel. I'm a Computer Science student in my second term (2A) at the University of Waterloo. I worked at <a target="_blank" id="link" href="https://league.com">League</a> as an Automation Engineering Intern last summer. I'm always looking for opportunities to learn, don't hesitate to reach out via email. Check out my <a target="_blank" id="link" href="resume.pdf">resume</a> and <a target="_blank" id="link" href="projects.html">projects</a> page to learn more!</p>
+    <p id="about"> Hey there! My name is Akash Patel. I'm a Computer Science student in my second term (2A) at the University of Waterloo. I worked at <a target="_blank" id="link" href="https://league.com">League</a> as an Automation Engineering Intern last summer. I'm always looking for opportunities to learn, don't hesitate to reach out via email. Check out my <a target="_blank" id="link" href="resume.pdf">resume</a> and <a id="link" href="projects.html">projects</a> page to learn more!</p>
 
 
     <div class="text-center">
